# ipk-tool

./: README.md  pyproject.toml
ipk_tool/: __init__.py  build_ipk.py  extract_ipk.py
